[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/space3.png" type="Texture" id=1]
[ext_resource path="res://Fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/TitleScreen.gd" type="Script" id=3]
[ext_resource path="res://Sprites/BlastFromPast.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 2 )

[node name="Node2D" type="Control"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 513, 304 )
scale = Vector2( 1.024, 1.208 )
texture = ExtResource( 1 )

[node name="ShopButton" type="Button" parent="."]
modulate = Color( 0.885742, 0.577888, 0.0337343, 1 )
margin_left = 765.0
margin_top = 16.0
margin_right = 876.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 1 )
text = "Shop"

[node name="TradeButton" type="Button" parent="."]
modulate = Color( 0.885742, 0.577888, 0.0337343, 1 )
margin_left = 765.0
margin_top = 77.0
margin_right = 876.0
margin_bottom = 129.0
custom_fonts/font = SubResource( 1 )
text = "Trade"

[node name="FightButton" type="Button" parent="."]
modulate = Color( 0.203922, 0.0313726, 1, 1 )
margin_left = 898.0
margin_top = 14.0
margin_right = 1009.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 1 )
text = "Fight"

[node name="GatherButton" type="Button" parent="."]
modulate = Color( 0.203922, 0.0313726, 1, 1 )
margin_left = 891.0
margin_top = 76.0
margin_right = 1011.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 1 )
text = "Gather"

[node name="CheckInvButton" type="Button" parent="."]
modulate = Color( 0.203922, 0.0313726, 1, 1 )
margin_left = 728.0
margin_top = 152.0
margin_right = 1010.0
margin_bottom = 204.0
custom_fonts/font = SubResource( 1 )
text = "Check Inventory"

[node name="TipsButton" type="Button" parent="."]
modulate = Color( 0.0313726, 0.811765, 1, 1 )
margin_left = 729.0
margin_top = 218.0
margin_right = 1011.0
margin_bottom = 270.0
custom_fonts/font = SubResource( 1 )
text = "Tips & Tricks"

[node name="ObjectiveButton" type="Button" parent="."]
modulate = Color( 0.0313726, 1, 0.301961, 1 )
margin_left = 729.0
margin_top = 281.0
margin_right = 1011.0
margin_bottom = 333.0
custom_fonts/font = SubResource( 1 )
text = "Objective"

[node name="CreditsButton" type="Button" parent="."]
modulate = Color( 1, 0.286275, 0.0313726, 1 )
margin_left = 730.0
margin_top = 347.0
margin_right = 1012.0
margin_bottom = 399.0
custom_fonts/font = SubResource( 1 )
text = "Credits"

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 265, 134 )
scale = Vector2( 0.2125, 0.209259 )
texture = ExtResource( 4 )

[connection signal="pressed" from="ShopButton" to="." method="_on_ShopButton_pressed"]
[connection signal="pressed" from="TradeButton" to="." method="_on_TradeButton_pressed"]
[connection signal="pressed" from="FightButton" to="." method="_on_FightButton_pressed"]
[connection signal="pressed" from="GatherButton" to="." method="_on_GatherButton_pressed"]
[connection signal="pressed" from="CheckInvButton" to="." method="_on_CheckInvButton_pressed"]
[connection signal="pressed" from="TipsButton" to="." method="_on_TipsButton_pressed"]
[connection signal="pressed" from="ObjectiveButton" to="." method="_on_ObjectiveButton_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_CreditsButton_pressed"]
